ReceiptsWeb/ngapp 2025-02-14 Added link on group & fix product list after group change

--- a/ReceiptsWebVueNg/ngapp/src/styles.css
+++ b/ReceiptsWebVueNg/ngapp/src/styles.css
@@ -16,3 +16,15 @@ tbody > tr:hover {
 */
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.buttonAsLink {
+    background: none !important;
+    border: none;
+    padding: 0 !important;
+    /*optional*/
+    /*font-family: arial, sans-serif;*/
+    /*input has OS specific font-family*/
+    color: hsla(160, 100%, 37%, 1); /*#0d6efd;*/
+    text-decoration: underline;
+    cursor: pointer;
+}
